dao - update db wirh jdbc